--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "supervisor ./bin/www"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-basic-auth": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jade-bootstrap": "^1.0.14",
