--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "basic-auth": "^2.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.1",
     "express-basic-auth": "^1.2.0",
     "http-errors": "~1.6.3",
